--- a/Atividade_N1/style.css
+++ b/Atividade_N1/style.css
@@ -6,7 +6,132 @@
     box-sizing:border-box;
 }
 body{
-    background-color: #F4F0EA;
-    font-family: "Nunito", sans-serif;
+    background-color: #6C4A4A;
+    color: #FFB6C1;
+    font-family:"Nunito", sans-serif;
+    font-weight: 400;
 
 }
+
+header {
+    padding: 2rem;
+    background-color: #331F19;
+    text-align: center;
+}
+
+.paragrafo-introducao{
+    color: #FFB6C1;
+}
+main {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+h2 {
+    color: #F4F0EA;
+    font-size: 1.2rem;
+}
+
+input[type="radio"], input[type="checkbox"] {
+    accent-color: #331F19;
+}
+
+input[type="text"], input[type="date"] {
+    width: 20%;
+    padding: 0.6rem;
+    border: 2px solid #FFB6C1;
+    outline: none;
+    border-radius: 10px;
+    background-color:#FFB6C1;
+}
+
+input::placeholder {
+    color: #CBBBA7;
+}
+
+select {
+    cursor: pointer;
+    background-color: #331F19;
+    color: #FFB6C1;
+    padding: 0.6rem;
+    padding-right: 0.6rem;
+    border-radius: 10px;
+    border: 0.8;
+    outline: none;
+}
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius :10px;
+}
+
+th {
+    background-color: #FFB6C1;
+    color: #331F19;
+    padding: 1rem;
+}
+
+td {
+    color: #F4F0EA;
+    padding: 1rem;
+    text-align: center;
+}
+
+tfoot td {
+    background-color: #331F19;
+    color: #F4F0EA;
+}
+
+details {
+    background-color: #FFB6C1;
+    border-radius: 10px;
+    padding: 0.6rem;
+    width: 30%;
+}
+
+summary {
+    color: #331F19;
+    margin: 0.5rem;
+    cursor: pointer;
+}
+
+ol {
+    margin-left: 1.5rem;
+}
+
+ol li {
+    padding: 0.2rem;
+    color:#331F19
+}
+
+
+
+button {
+    background-color: #FFB6C1;
+    border: none;
+    padding: 0.8rem;
+    color: #331F19;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+footer {
+    background-color: #331F19;
+    padding: 2rem;
+    text-align: center;
+}
+
+.paragrafo-footer {
+    color: #F4F0EA
+}
+
