--- a/aula07-router/views/index.ejs
+++ b/aula07-router/views/index.ejs
@@ -22,7 +22,7 @@
         <li>(POST) Data</li>
         <li><a href="/about">(GET) About</a></li>
         <li><a href="/users">(GET) Users</a></li>
-        <li><a href="/users/signin/ismaelnascimento">(GET) Signin with user: ismaelnascimento</a></li>
+        <li><a href="/users/signin/Yasmin-Sousa">(GET) Signin with user: Yasmin-Sousa</a></li>
         <li><a href="/users/signup">(GET) Signup</a></li>
     </ul>
   </div>
