--- a/aula07-router/views/index.ejs
+++ b/aula07-router/views/index.ejs
@@ -12,7 +12,7 @@
   
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque enim nisi, pellentesque non neque ac, sodales viverra ipsum. Suspendisse malesuada tempus augue, in imperdiet mi sodales et. Phasellus dictum nibh nec consectetur accumsan. Phasellus rutrum orci id laoreet tincidunt. Vivamus vitae consectetur dolor. Integer vel tempus quam. Aliquam dapibus egestas facilisis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi lectus diam, semper ut feugiat id, finibus quis urna. Nullam maximus tristique magna in placerat.</p>
 
-  <p>by <b>Ismael Nascimento</b></p>
+  <p>by <b>Yasmin Sousa</b></p>
 
   <hr>
 
