--- a/Atividade_N1/style.css
+++ b/Atividade_N1/style.css
@@ -13,7 +13,7 @@ body{
 
 }
 
-img{
+.imgEstrela{
     width: 5rem;
     border-radius: 10px;
 }
@@ -76,6 +76,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     border-radius: 10px;
+    
 }
 
 th {
@@ -126,6 +127,10 @@ button {
     color: #331F19;
     border-radius: 10px;
     cursor: pointer;
+}
+.resultado {
+    text-align: center
+   
 }
 
 footer {
