--- a/Atividade_N1/Projeto_PW/frontend/style.css
+++ b/Atividade_N1/Projeto_PW/frontend/style.css
@@ -59,6 +59,9 @@ input[type="date"] {
     border-radius: 10px;
     background-color:#FFB6C1;
 }
+input[type="text"]{
+    width: 20%;
+}
 
 select {
     cursor: pointer;
