--- a/Avaliação_N2/Projeto_PW/frontend/style.css
+++ b/Avaliação_N2/Projeto_PW/frontend/style.css
@@ -61,6 +61,11 @@ input[type="date"] {
 }
 input[type="text"]{
     width: 20%;
+    padding: 0.6rem;
+    border: 2px solid #FFB6C1;
+    outline: none;
+    border-radius: 10px;
+    background-color: #F4F0EA
 }
 
 select {
@@ -133,6 +138,18 @@ button {
     border-radius: 10px;
     cursor: pointer;
 }
+
+fieldset {
+    border: 2px solid #FFB6C1;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+legend {
+    color: #331F19;
+    padding: 0 0.5rem;
+}
+
 .resultado {
     text-align: center
    
